add alt text to image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <main>
       <div class="img-container">
-        <img src="/images/image-header-mobile.jpg" alt="" />
+        <img
+          src="/images/image-header-mobile.jpg"
+          alt="Image of a group of women in a business environment typing on their laptops"
+        />
       </div>
       <div class="test">
         <h1>Get <strong>insights</strong> that help your business grow.</h1>
